* fixes in setting evaluation * error message translation
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@124 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/settings/_dmsf_settings.erb
+++ b/redmine_dmsf/app/views/settings/_dmsf_settings.erb
@@ -16,7 +16,10 @@
 
 <p>
   <%=content_tag(:label, l(:label_file_storage_directory) + ":") %>
-  <% storage_dir = @settings["dmsf_storage_directory"].strip %>
+  <% 
+	storage_dir = @settings["dmsf_storage_directory"].strip
+	storage_dir = "#{RAILS_ROOT}/files/dmsf" if storage_dir.blank?
+  %>
   <%=text_field_tag "settings[dmsf_storage_directory]", storage_dir, :size=>50 %><br/>
   (<%=l(:label_default)%>: <%="#{RAILS_ROOT}/files/dmsf"%>)
 </p>
