* fixed Issue 71: bug : Undefined method count
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@132 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf/show.html.erb
+++ b/redmine_dmsf/app/views/dmsf/show.html.erb
@@ -175,7 +175,7 @@ form_tag({:action => "entries_operation", :id => @project, :folder_id => @folder
 			<button type="button" id="entries_delete_button" title="<%=l(:title_delete_checked)%>"><%=l(:button_delete)%></button>
 		<% end %>
 		<div style="float: right;">
-			<%= l(:label_number_of_folders)%>: <%= @subfolders.count %>, <%= l(:label_number_of_documents)%>: <%= @files.count %>
+			<%= l(:label_number_of_folders)%>: <%= @subfolders.length %>, <%= l(:label_number_of_documents)%>: <%= @files.length %>
 		</div>
 	</div>
 	<br />
