--- a/redmine_dmsf/app/views/dmsf/_multi_upload.html.erb
+++ b/redmine_dmsf/app/views/dmsf/_multi_upload.html.erb
@@ -81,7 +81,7 @@
 			uploader.html("<div></div>");
 			uploader = jQuery("div",uploader);
 			uploader.plupload({
-				runtimes : 'gears,html5,flash,html4',
+				runtimes : 'html5,flash,html4',
 				url : '<%= url_for({:controller => "dmsf_upload", :action => "upload_file", :id => @project, :folder_id => @folder}) %>',
 				max_file_size : "100mb",
 				max_file_count: '<%= Setting.plugin_redmine_dmsf["dmsf_max_file_upload"].to_i if Setting.plugin_redmine_dmsf["dmsf_max_file_upload"].to_i > 0 %>',
