--- a/redmine_dmsf/app/views/dmsf_files/show.html.erb
+++ b/redmine_dmsf/app/views/dmsf_files/show.html.erb
@@ -152,7 +152,7 @@
 
 <% content_for :header_tags do %>
 	<%= stylesheet_link_tag "dmsf", :plugin => "redmine_dmsf" %>
-	<%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js" %>
+	<%= javascript_include_tag "jquery-1.6.1.min.js", :plugin => "redmine_dmsf" %>
 	<script type="text/javascript">
 		jQuery.noConflict();
 	</script>
