--- a/redmine_dmsf/app/views/dmsf/_multi_upload.html.erb
+++ b/redmine_dmsf/app/views/dmsf/_multi_upload.html.erb
@@ -65,7 +65,7 @@
 </script>
 
 <% content_for :header_tags do %>
-	<%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js" %>
+	<%= javascript_include_tag "jquery-ui-1.8.13.min.js", :plugin => "redmine_dmsf" %>
 	<%= javascript_include_tag "plupload/plupload.js", :plugin => "redmine_dmsf" %>
 	<%= javascript_include_tag "plupload/plupload.flash.js", :plugin => "redmine_dmsf" %>
 	<%= javascript_include_tag "plupload/plupload.gears.js", :plugin => "redmine_dmsf" %>
