--- a/redmine_dmsf/app/views/dmsf_upload/upload_files.html.erb
+++ b/redmine_dmsf/app/views/dmsf_upload/upload_files.html.erb
@@ -31,7 +31,7 @@ form_tag({:action => "commit_files", :id => @project, :folder_id => @folder},
 
 <% content_for :header_tags do %>
 	<%= stylesheet_link_tag "dmsf", :plugin => "redmine_dmsf" %>
-	<%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" %>
+	<%= javascript_include_tag "jquery-1.6.1.min.js", :plugin => "redmine_dmsf" %>
 	<script type="text/javascript">
 		jQuery.noConflict();
 		
