* finished Issue 79: When showing the number of files in a folder it should be also counted the sub-folders
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@147 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf/show.html.erb
+++ b/redmine_dmsf/app/views/dmsf/show.html.erb
@@ -50,7 +50,7 @@ form_tag({:action => "entries_operation", :id => @project, :folder_id => @folder
 				<%= link_to(h(subfolder.title),
 		          {:action => "show", :id => @project, :folder_id => subfolder},
 		          :class => "icon icon-folder") %>
-				<div class="filename" title="<%= l(:title_number_of_files_in_directory)%>">[<%= subfolder.files.count %>]</div>
+				<div class="filename" title="<%= l(:title_number_of_files_in_directory)%>">[<%= subfolder.deep_file_count %>]</div>
 			</td>
 			<td class="size">-</td>
 			<td class="modified">-</td>
