* finished: Issue 82: Move user settings to members relation
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@152 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_state/_user_pref.html.erb
+++ b/redmine_dmsf/app/views/dmsf_state/_user_pref.html.erb
@@ -7,7 +7,7 @@
 		<%= select_tag("email_notify", 
 				options_for_select([[l(:select_option_default), nil], 
 					[l(:select_option_activated), true], [l(:select_option_deactivated), false]], 
-					:selected => DmsfUserPref.for(@project, User.current).email_notify)) %>
+					:selected => @project.members.find(:first, :conditions => {:user_id => User.current.id}).dmsf_mail_notification)) %>
 		<%= submit_tag(l(:submit_save), :title => l(:title_save_preferences)) %>
 	</div>
 	<% end %>
