* finished Issue 26: Auditing access to file revisions
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@161 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_files/_revision_access.html.erb
+++ b/redmine_dmsf/app/views/dmsf_files/_revision_access.html.erb
@@ -9,18 +9,14 @@
 			</tr>
 		</thead>
 		<tbody>
+<% @revision.access_grouped.each do |access| %>
 			<tr>
-				<td>Row 1 Data 1</td>
-				<td>Row 1 Data 2</td>
-				<td>qqq</td>
-				<td>www</td>
+				<td><%=h(User.find(access[0]))%></td>
+				<td><%=access[1]%></td>
+				<td><%=Time.parse(access[2]).to_s(:db)%></td>
+				<td><%=Time.parse(access[3]).to_s(:db)%></td>
 			</tr>
-			<tr>
-				<td>Row 2 Data 1</td>
-				<td>Row 2 Data 2</td>
-				<td>aaa</td>
-				<td>sss</td>
-			</tr>
+<% end %>
 		</tbody>
 	</table>
 </p>
