--- a/redmine_dmsf/app/views/dmsf_files/_revision_access.html.erb
+++ b/redmine_dmsf/app/views/dmsf_files/_revision_access.html.erb
@@ -1,5 +1,5 @@
 <p>
-	<table id="table_id" style="width: 100%" class="display access-table">
+	<table class="display access-table list">
 		<thead>
 			<tr>
 				<th><%=l(:field_user)%></th>
