* file list styling
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@168 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/assets/stylesheets/jquery.dataTables/jquery-ui.dataTables.css
+++ b/redmine_dmsf/assets/stylesheets/jquery.dataTables/jquery-ui.dataTables.css
@@ -332,25 +332,25 @@ table.display tr.odd.row_selected td {
  */
 /* For the standard odd/even */
 tr.odd td.sorting_1 {
-	background: url('images/highlight.png?2') repeat;
+	background: url('images/highlight.png') repeat;
 }
 
 tr.odd td.sorting_2 {
-	background: url('images/highlight.png?5') repeat;
+	background: url('images/highlight.png') repeat;
 }
 
 tr.odd td.sorting_3 {
-	background: url('images/highlight.png?5') repeat;
+	background: url('images/highlight.png') repeat;
 }
 
 tr.even td.sorting_1 {
-	background: url('images/highlight.png?5') repeat;
+	background: url('images/highlight.png') repeat;
 }
 
 tr.even td.sorting_2 {
-	background: url('images/highlight.png?5') repeat;
+	background: url('images/highlight.png') repeat;
 }
 
 tr.even td.sorting_3 {
-	background: url('images/highlight.png?5') repeat;
+	background: url('images/highlight.png') repeat;
 }
