* file list styling
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@171 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf/show.html.erb
+++ b/redmine_dmsf/app/views/dmsf/show.html.erb
@@ -28,7 +28,7 @@ form_tag({:action => "entries_operation", :id => @project, :folder_id => @folder
 	:class => "dmfs_entries", :id => "entries_form") do
 %>
 	<%= hidden_field_tag("action") %> 
-	<table class="display entries list" id="browser">
+	<table class="display entries" id="browser">
 		<thead>
 			<tr id="root">
 				<th class="check">
