* fixed Issue 90: Defect: Download History always showed for latest version
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@172 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_files/_revision_access.html.erb
+++ b/redmine_dmsf/app/views/dmsf_files/_revision_access.html.erb
@@ -9,7 +9,7 @@
 			</tr>
 		</thead>
 		<tbody>
-<% @revision.access_grouped.each do |access| %>
+<% revision.access_grouped.each do |access| %>
 			<tr>
 				<td><%=h(User.find(access[0]))%></td>
 				<td><%=access[1]%></td>
