* fixed Issue 95: Error on file revision accesses with PostgreSQL as backend DB
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@176 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_files/_revision_access.html.erb
+++ b/redmine_dmsf/app/views/dmsf_files/_revision_access.html.erb
@@ -11,10 +11,10 @@
 		<tbody>
 <% revision.access_grouped.each do |access| %>
 			<tr>
-				<td><%=h(User.find(access[0]))%></td>
-				<td><%=access[1]%></td>
-				<td><%=Time.parse(access[2]).to_s(:db)%></td>
-				<td><%=Time.parse(access[3]).to_s(:db)%></td>
+				<td><%=h(User.find(access["user_id"]))%></td>
+				<td><%=access["count"]%></td>
+				<td><%=Time.parse(access["min"]).to_s(:db)%></td>
+				<td><%=Time.parse(access["max"]).to_s(:db)%></td>
 			</tr>
 <% end %>
 		</tbody>
