* small design adjustments
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@178 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/assets/stylesheets/dmsf.css
+++ b/redmine_dmsf/assets/stylesheets/dmsf.css
@@ -37,7 +37,7 @@ table.entries th.check div.DataTables_sort_wrapper {
 }
 
 table.display th {
-	font-size: 1.2em;
+	font-weight: bold;
 }
 
 table.display tbody tr.even {
