* preparation for 0.9.2 release
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@190 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf/show.html.erb
+++ b/redmine_dmsf/app/views/dmsf/show.html.erb
@@ -61,10 +61,10 @@ form_tag({:action => "entries_operation", :id => @project, :folder_id => @folder
 		          :class => "icon icon-folder") %>
 				<div class="filename" title="<%= l(:title_number_of_files_in_directory)%>">[<%= subfolder.deep_file_count %>]</div>
 			</td>
-			<td class="size">-</td>
-			<td class="modified">-</td>
-			<td class="version">-</td>
-			<td class="author">-</td>
+			<td class="size"></td>
+			<td class="modified"></td>
+			<td class="version"></td>
+			<td class="author"></td>
 			<td class="actions">
 				<% if User.current.allowed_to?(:file_approval, @project) %>
 					<div class="right_icon_box">
