* working on permission validation for file copy
git-svn-id: http://redmine-dmsf.googlecode.com/svn/branches/devel_1.1.0@218 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_files/show.html.erb
+++ b/redmine_dmsf/app/views/dmsf_files/show.html.erb
@@ -30,10 +30,9 @@
 						:title => l(:title_notifications_not_active_activate)) %>
 			<% end %>
 		<% end %>
-		
-		&nbsp;
-		<%= link_to("Copy", {:controller => :dmsf_files_copy, :action => "new", :id => @file }) %>
 	<% end %>
+	&nbsp;
+	<%= link_to(image_tag("copy.png"), {:controller => :dmsf_files_copy, :action => "new", :id => @file }, :title => l(:title_copy_or_move)) %>
 </div>
 
 <% path = @file.folder.nil? ? [] : @file.folder.dmsf_path %>
