--- a/redmine_dmsf/app/views/dmsf_files_copy/new.html.erb
+++ b/redmine_dmsf/app/views/dmsf_files_copy/new.html.erb
@@ -6,33 +6,35 @@
 <% path = @file.folder.nil? ? [] : @file.folder.dmsf_path %>
 <h2>
 <%= render(:partial => "/dmsf/path", :locals => {:path => path}) %>
-/ 
-<%= h(@file.last_revision.title) %>
+/
+<%= link_to(h(@file.title), {:controller => "dmsf_files", :action => "show", :id=> @file}) %> 
 <%= image_tag("notify.png", :plugin => "redmine_dmsf", :title => l(:title_notifications_active)) if @file.notification %>
 </h2>
 
-<% form_tag({:action => "create", :id => @file}, :id => "copyForm") do |f| %>
-	<div class="box dmsf_detail">
-		<%= error_messages_for("file") %>
-		<p>
-			<label for="target_project_id"><%=l(:field_project)%>:</label>
-			<%= select_tag("target_project_id",
-		               project_tree_options_for_select(DmsfFile.allowed_target_projects_on_copy, :selected => @target_project),
-		               :onchange => remote_function(:url => { :action => 'new' },
-		                                            :method => :get,
-		                                            :update => 'content',
-		                                            :with => "Form.serialize('copyForm')")) %>
-		</p>
-		<p>
-			<%= label_tag("target_folder_id", l(:label_folder) + ":") %>
-			<%= select_tag("target_folder_id", 
-				options_for_select(DmsfFolder.directory_tree(@target_project), 
-					:selected => (@file.folder.id unless @file.folder.nil?))) %>
-		</p>
-	</div>
-	
-	<%= submit_tag(l(:button_copy)) %>
-	<%= submit_tag(l(:button_move), :name => 'move') %>
+<% unless DmsfFile.allowed_target_projects_on_copy.blank?
+	form_tag({:action => "create", :id => @file}, :id => "copyForm") do |f| %>
+		<div class="box dmsf_detail">
+			<%= error_messages_for("file") %>
+			<p>
+				<label for="target_project_id"><%=l(:label_target_project)%>:</label>
+				<%= select_tag("target_project_id",
+			               project_tree_options_for_select(DmsfFile.allowed_target_projects_on_copy, :selected => @target_project),
+			               :onchange => remote_function(:url => { :action => 'new' },
+			                                            :method => :get,
+			                                            :update => 'content',
+			                                            :with => "Form.serialize('copyForm')")) %>
+			</p>
+			<p>
+				<%= label_tag("target_folder_id", l(:label_target_folder) + ":") %>
+				<%= select_tag("target_folder_id", 
+					options_for_select(DmsfFolder.directory_tree(@target_project), 
+						:selected => (@file.folder.id unless @file.folder.nil?))) %>
+			</p>
+		</div>
+		
+		<%= submit_tag(l(:button_copy)) %>
+		<%= submit_tag(l(:button_move), :name => 'move') %>
+	<% end %>
 <% end %>
 
 <% content_for :header_tags do %>
