* finished Issue 134:	Create possibility to copy file even to different project
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@220 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_files/show.html.erb
+++ b/redmine_dmsf/app/views/dmsf_files/show.html.erb
@@ -31,6 +31,8 @@
 			<% end %>
 		<% end %>
 	<% end %>
+	&nbsp;
+	<%= link_to(image_tag("copy.png"), {:controller => :dmsf_files_copy, :action => "new", :id => @file }, :title => l(:title_copy_or_move)) %>
 </div>
 
 <% path = @file.folder.nil? ? [] : @file.folder.dmsf_path %>
@@ -172,5 +174,15 @@ sUrl = "jquery.dataTables/#{I18n.locale.to_s.downcase}.json" if I18n.locale && !
 	<%= javascript_include_tag "jquery.dataTables/jquery.dataTables.min.js", :plugin => "redmine_dmsf" %>
 	<script type="text/javascript">
 		jQuery.noConflict();
+		
+		function copyFile() {
+			var $copyDialog = jQuery('#copyDialog');
+			$copyDialog.dialog({ 
+				autoOpen: false,
+				title: "Copy file" 
+			});
+			$copyDialog.dialog('open')
+		}
+		
 	</script>
 <% end %>
