* fixed Issue 130: File detail controls wrapping
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@222 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_files/_file_new_revision.html.erb
+++ b/redmine_dmsf/app/views/dmsf_files/_file_new_revision.html.erb
@@ -29,7 +29,7 @@ form_for(:dmsf_file_revision, @revision, :url => {:action => "create_revision", 
 						</p>
 					</div>
 					<div class="splitcontentright">
-						<p>
+						<p style="white-space: nowrap;">
 							<%= label_tag("", l(:label_file) + ":") %>
 							<%= f.select(:dmsf_folder_id, 
 								options_for_select(DmsfFolder.directory_tree(@project), 
